// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server generateClient with cookies can custom query 1`] = `
[
  [
    "AmplifyClassV6",
    {
      "abortController": AbortController {},
      "options": {
        "body": {
          "query": "query ($argumentContent: String!) {
  echo(argumentContent: $argumentContent) {
    resultContent
  }
}
",
          "variables": {
            "argumentContent": "echo argumentContent value",
          },
        },
        "headers": {
          "X-Api-Key": "FAKE-KEY",
          "x-amz-user-agent": "aws-amplify/latest api/latest framework/latest",
        },
        "signingServiceInfo": undefined,
        "withCredentials": undefined,
      },
      "url": "https://localhost/graphql",
    },
  ],
]
`;

exports[`server generateClient with cookies can list 1`] = `
[
  [
    "AmplifyClassV6",
    {
      "abortController": AbortController {},
      "options": {
        "body": {
          "query": "query ($filter: ModelTodoFilterInput, $limit: Int, $nextToken: String) {
  listTodos(filter: $filter, limit: $limit, nextToken: $nextToken) {
    items {
      id
      name
      description
      status
      tags
      createdAt
      updatedAt
      todoMetaId
      owner
    }
    nextToken
    __typename
  }
}
",
          "variables": {
            "filter": {
              "name": {
                "contains": "name",
              },
            },
          },
        },
        "headers": {
          "X-Api-Key": "FAKE-KEY",
          "x-amz-user-agent": "aws-amplify/latest api/latest framework/latest",
        },
        "signingServiceInfo": undefined,
        "withCredentials": undefined,
      },
      "url": "https://localhost/graphql",
    },
  ],
]
`;

exports[`server generateClient with cookies can list with limit 1`] = `
[
  [
    "AmplifyClassV6",
    {
      "abortController": AbortController {},
      "options": {
        "body": {
          "query": "query ($filter: ModelTodoFilterInput, $limit: Int, $nextToken: String) {
  listTodos(filter: $filter, limit: $limit, nextToken: $nextToken) {
    items {
      id
      name
      description
      status
      tags
      createdAt
      updatedAt
      todoMetaId
      owner
    }
    nextToken
    __typename
  }
}
",
          "variables": {
            "filter": {
              "name": {
                "contains": "name",
              },
            },
            "limit": 5,
          },
        },
        "headers": {
          "X-Api-Key": "FAKE-KEY",
          "x-amz-user-agent": "aws-amplify/latest api/latest framework/latest",
        },
        "signingServiceInfo": undefined,
        "withCredentials": undefined,
      },
      "url": "https://localhost/graphql",
    },
  ],
]
`;

exports[`server generateClient with cookies can list with nextToken 1`] = `
[
  [
    "AmplifyClassV6",
    {
      "abortController": AbortController {},
      "options": {
        "body": {
          "query": "query ($filter: ModelTodoFilterInput, $limit: Int, $nextToken: String) {
  listTodos(filter: $filter, limit: $limit, nextToken: $nextToken) {
    items {
      id
      name
      description
      status
      tags
      createdAt
      updatedAt
      todoMetaId
      owner
    }
    nextToken
    __typename
  }
}
",
          "variables": {
            "filter": {
              "name": {
                "contains": "name",
              },
            },
            "nextToken": "some-token",
          },
        },
        "headers": {
          "X-Api-Key": "FAKE-KEY",
          "x-amz-user-agent": "aws-amplify/latest api/latest framework/latest",
        },
        "signingServiceInfo": undefined,
        "withCredentials": undefined,
      },
      "url": "https://localhost/graphql",
    },
  ],
]
`;

exports[`server generateClient with cookies can list with sort direction (ascending) 1`] = `
[
  [
    "AmplifyClassV6",
    {
      "abortController": AbortController {},
      "options": {
        "body": {
          "query": "query ($filter: ModelTodoFilterInput, $limit: Int, $nextToken: String) {
  listTodos(filter: $filter, limit: $limit, nextToken: $nextToken) {
    items {
      id
      name
      description
      status
      tags
      createdAt
      updatedAt
      todoMetaId
      owner
    }
    nextToken
    __typename
  }
}
",
          "variables": {
            "id": "some-id",
            "sortDirection": "ASC",
          },
        },
        "headers": {
          "X-Api-Key": "FAKE-KEY",
          "x-amz-user-agent": "aws-amplify/latest api/latest framework/latest",
        },
        "signingServiceInfo": undefined,
        "withCredentials": undefined,
      },
      "url": "https://localhost/graphql",
    },
  ],
]
`;

exports[`server generateClient with cookies can list with sort direction (descending) 1`] = `
[
  [
    "AmplifyClassV6",
    {
      "abortController": AbortController {},
      "options": {
        "body": {
          "query": "query ($filter: ModelTodoFilterInput, $limit: Int, $nextToken: String) {
  listTodos(filter: $filter, limit: $limit, nextToken: $nextToken) {
    items {
      id
      name
      description
      status
      tags
      createdAt
      updatedAt
      todoMetaId
      owner
    }
    nextToken
    __typename
  }
}
",
          "variables": {
            "id": "some-id",
            "sortDirection": "DESC",
          },
        },
        "headers": {
          "X-Api-Key": "FAKE-KEY",
          "x-amz-user-agent": "aws-amplify/latest api/latest framework/latest",
        },
        "signingServiceInfo": undefined,
        "withCredentials": undefined,
      },
      "url": "https://localhost/graphql",
    },
  ],
]
`;

exports[`server generateClient with cookies with request can custom query 1`] = `
[
  [
    "AmplifyClassV6",
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($argumentContent: String!) {
      echo(argumentContent: $argumentContent) {resultContent}
    }
  ",
      "variables": {
        "argumentContent": "echo argumentContent value",
      },
    },
  ],
]
`;
